--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -95,3 +95,10 @@
   HAL_ID = {hal-01945578},
   HAL_VERSION = {v1},
 }
+
+@inproceedings{video,
+TITLE = {Convex (and tractable?) formulations for single hidden layer neural networks (oral presentation)},
+AUTHOR = {Bach, Francis},
+year = {2016},
+booktitle = {Applied Harmonic Analysis, Massive Data Sets, Machine Learning, and Signal Processing workshop}
+}
